Adding new notebook and utilities for ebola modeling

--- a/notebooks/05_seir_vs_sir.ipynb
+++ b/notebooks/05_seir_vs_sir.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2fb3d868",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "import sys, os, numpy as np, pandas as pd, matplotlib.pyplot as plt\n",
     "sys.path.append(os.path.abspath(os.path.join('..', 'src')))\n",
     "from dataio.loaders import load_owid_covid\n",
-    "from epimodels.fitting import fit_beta_gamma, fit_seir_custom\n"
+    "from epimodels.fitting import fit_beta_gamma, fit_seir_custom"
    ]
   },
   {
