--- a/notebooks/sir_exploration.ipynb
+++ b/notebooks/sir_exploration.ipynb
@@ -35,19 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "ed32dd4c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "id": "136743d6",
    "metadata": {},
    "outputs": [],
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "1bd331e7",
    "metadata": {},
    "outputs": [
@@ -222,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "8c1b52fb",
    "metadata": {},
    "outputs": [
@@ -282,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "ae4b8526",
    "metadata": {},
    "outputs": [
@@ -291,7 +282,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\vscerra\\Desktop\\DataScienceProjects\\disease_modeling_project\\src\\epimodels\\utils\\sir_figures.py:237: UserWarning: Glyph 8320 (\\N{SUBSCRIPT ZERO}) missing from current font.\n",
-      "  plt.show()\n",
+      "  plt.tight_layout()\n",
       "c:\\Users\\vscerra\\.conda\\envs\\my-env\\Lib\\site-packages\\IPython\\core\\pylabtools.py:152: UserWarning: Glyph 8320 (\\N{SUBSCRIPT ZERO}) missing from current font.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n"
      ]
@@ -343,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "57422857",
    "metadata": {},
    "outputs": [
@@ -393,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "46d5535e",
    "metadata": {},
    "outputs": [
@@ -434,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "id": "29eabb21",
    "metadata": {},
    "outputs": [
@@ -442,7 +433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vscerra\\AppData\\Local\\Temp\\ipykernel_25300\\1281895772.py:36: UserWarning: Glyph 8320 (\\N{SUBSCRIPT ZERO}) missing from current font.\n",
+      "C:\\Users\\vscerra\\AppData\\Local\\Temp\\ipykernel_12944\\1281895772.py:36: UserWarning: Glyph 8320 (\\N{SUBSCRIPT ZERO}) missing from current font.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -518,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "8d42bee3",
    "metadata": {},
    "outputs": [
@@ -560,14 +551,6 @@
     "print(\"R_∞/N = 1 - exp(-R₀ · R_∞/N)\")\n",
     "print(\"where R_∞ is the final number of recovered individuals\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf1544c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
