Adding parameter estimation to Yellow Fever model

--- a/notebooks/Senegal_Yellow_Fever_model.ipynb
+++ b/notebooks/Senegal_Yellow_Fever_model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1784d02d",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,7 @@
     "import sys, os \n",
     "sys.path.append(os.path.abspath(os.path.join('..','src')))\n",
     "from epimodels.yellow_fever_models import YellowFeverModel, create_vaccination_function\n",
+    "from epimodels.utils.parameter_estimation import ParameterEstimator, calculate_model_metrics\n",
     "\n",
     "# set style\n",
     "sns.set_style('whitegrid')\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "73172f61",
    "metadata": {},
    "outputs": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "845aebaf",
    "metadata": {},
    "outputs": [
@@ -338,7 +339,7 @@
    "id": "3edde134",
    "metadata": {},
    "source": [
-    "## Model Setup and Basic Simulation\n",
+    "## Model Setup\n",
     "\n",
     "### Model Structure\n",
     "\n",
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a31429ef",
    "metadata": {},
    "outputs": [
@@ -418,11 +419,456 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "fa1ff3ae",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Parameter Estimation via MLE\n",
+    "\n",
+    "Fit the model to the actual Senegalese outbreak data using Maximum Likelihood Estimation (MLE). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "028d3b15",
+   "metadata": {},
+   "source": [
+    "### Setup Parameter Estimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d3aef966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter Estimator initialized\n",
+      "Fixed parameters: {'sigma': 0.16666666666666666, 'gamma': 0.14285714285714285}\n",
+      "Data points: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initialize parameter estimator\n",
+    "estimator = ParameterEstimator(\n",
+    "    data=data,\n",
+    "    population=800000,\n",
+    "    fixed_params={\n",
+    "        'sigma':1/6,    # biorealistic six day incubation period\n",
+    "        'gamma':1/7,    # biorealistic seven day infectious period \n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "print(\"Parameter Estimator initialized\")\n",
+    "print(f\"Fixed parameters: {estimator.fixed_params}\")\n",
+    "print(f\"Data points: {len(estimator.t_data)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e610a646",
+   "metadata": {},
+   "source": [
+    "### Define Initial Parameter Guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "05d1e8f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial parameter guess:\n",
+      "  beta                : 0.500000\n",
+      "  alpha               : 0.020000\n",
+      "  vaccination_rate    : 0.010000\n",
+      "  vaccination_start   : 259.000000\n",
+      "\n",
+      "Initial guess predictions:\n",
+      "  Final cases:  756048  (Observed: 60)\n",
+      "  Final deaths: 92848  (Observed: 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# initial parameter guess\n",
+    "initial_guess = {\n",
+    "    'beta': 0.5,                # transmission rate\n",
+    "    'alpha': 0.02,              # mortality rate (CFR ~18%)\n",
+    "    'vaccination_rate': 0.01,    # 1% vaccinated per day\n",
+    "    'vaccination_start': 259     # Oct 1, 2002\n",
+    "}\n",
+    "\n",
+    "print(\"Initial parameter guess:\")\n",
+    "for param, value in initial_guess.items():\n",
+    "    print(f\"  {param:20s}: {value:.6f}\")\n",
+    "\n",
+    "# test simulation with initial guess\n",
+    "cases_init, deaths_init = estimator.simulate_model(initial_guess, initial_infected=10)\n",
+    "\n",
+    "print(\"\\nInitial guess predictions:\")\n",
+    "print(f\"  Final cases:  {cases_init[-1]:.0f}  (Observed: {data['cases_cumulative'].iloc[-1]})\")\n",
+    "print(f\"  Final deaths: {deaths_init[-1]:.0f}  (Observed: {data['deaths_cumulative'].iloc[-1]})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cd45512",
+   "metadata": {},
+   "source": [
+    "### Run Parameter Optimization (MLE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b0b79a84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Maximum Likelihood Estimation...\n",
+      "PARAMETER ESTIMATION RESULTS\n",
+      "\n",
+      "Fitted Parameters:\n",
+      "  beta                : 0.102606\n",
+      "  alpha               : 0.000000\n",
+      "  vaccination_rate    : 0.049736\n",
+      "  vaccination_start   : 259.000000\n",
+      "\n",
+      "Fixed Parameters:\n",
+      "  sigma               : 0.166667\n",
+      "  gamma               : 0.142857\n",
+      "\n",
+      "Optimization Info:\n",
+      "  success                  : True\n",
+      "  neg_log_likelihood       : 177.783434989267\n",
+      "  AIC                      : 363.566869978534\n",
+      "  BIC                      : 366.6572248674931\n",
+      "  n_iterations             : 40\n",
+      "  message                  : CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH\n",
+      "Basic Reproduction Number R₀ = 0.7182\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Running Maximum Likelihood Estimation...\")\n",
+    "\n",
+    "# fit model to data\n",
+    "fitted_params, result = estimator.fit_mle(\n",
+    "    initial_guess=initial_guess,\n",
+    "    method='L-BFGS-B',\n",
+    "    use_global=False\n",
+    ")\n",
+    "\n",
+    "# display results\n",
+    "print(\"PARAMETER ESTIMATION RESULTS\")\n",
+    "print(\"\\nFitted Parameters:\")\n",
+    "for name, value in fitted_params.items():\n",
+    "    print(f\"  {name:20s}: {value:.6f}\")\n",
+    "\n",
+    "print(\"\\nFixed Parameters:\")\n",
+    "for name, value in estimator.fixed_params.items():\n",
+    "    print(f\"  {name:20s}: {value:.6f}\")\n",
+    "\n",
+    "print(\"\\nOptimization Info:\")\n",
+    "for key, value in result.items():\n",
+    "    if value is not None:\n",
+    "        print(f\"  {key:25s}: {value}\")\n",
+    "\n",
+    "# calculate R0 with fitted parameters\n",
+    "all_params = {**estimator.fixed_params, **fitted_params}\n",
+    "vaccination_func_fitted = create_vaccination_function(\n",
+    "    start_date=fitted_params['vaccination_start'],\n",
+    "    vaccination_rate=fitted_params['vaccination_rate']\n",
+    ")\n",
+    "\n",
+    "model_fitted = YellowFeverModel(\n",
+    "    beta=fitted_params['beta'],\n",
+    "    sigma=all_params['sigma'],\n",
+    "    gamma=all_params['gamma'],\n",
+    "    alpha=fitted_params['alpha'],\n",
+    "    vaccination_func=vaccination_func_fitted,\n",
+    "    population=800000\n",
+    ")\n",
+    "\n",
+    "r0 = model_fitted.calculate_r0()\n",
+    "print(f\"Basic Reproduction Number R₀ = {r0:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b071ad",
+   "metadata": {},
+   "source": [
+    "### Simulate Fitted Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e26bca32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitted model simulation complete\n",
+      "  Time points: 351\n",
+      "  Simulation span: 0 to 350 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "# simulate with fitted parameters\n",
+    "initial_conditions = {\n",
+    "    'S': 799990,\n",
+    "    'E': 0,\n",
+    "    'I': 10,\n",
+    "    'R': 0,\n",
+    "    'V': 0,\n",
+    "    'D': 0\n",
+    "}\n",
+    "\n",
+    "t_eval = np.linspace(0, 350, 351)\n",
+    "t_fitted, y_fitted = model_fitted.simulate(\n",
+    "    initial_conditions=initial_conditions,\n",
+    "    t_span=(0, 350),\n",
+    "    t_eval=t_eval\n",
+    ")\n",
+    "\n",
+    "print(\"Fitted model simulation complete\")\n",
+    "print(f\"  Time points: {len(t_fitted)}\")\n",
+    "print(f\"  Simulation span: {t_fitted[0]:.0f} to {t_fitted[-1]:.0f} days\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d029ef1",
+   "metadata": {},
+   "source": [
+    "### Evaluate Model Fit Quality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7c0eda47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Fit Quality:\n",
+      "\n",
+      "Cases:\n",
+      "  MAE            : 16.3149\n",
+      "  RMSE           : 17.7635\n",
+      "  R2             : 0.0745\n",
+      "  MAPE           : 73.3007\n",
+      "\n",
+      "Deaths:\n",
+      "  MAE            : 4.1250\n",
+      "  RMSE           : 5.7118\n",
+      "  R2             : -1.0901\n",
+      "  MAPE           : 75.0000\n",
+      "Observed vs Predicted:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Observed Cases</th>\n",
+       "      <th>Predicted Cases</th>\n",
+       "      <th>Observed Deaths</th>\n",
+       "      <th>Predicted Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002-01-18</td>\n",
+       "      <td>18</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-10-04</td>\n",
+       "      <td>12</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-10-11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2002-10-17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2002-10-24</td>\n",
+       "      <td>41</td>\n",
+       "      <td>35.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2002-10-31</td>\n",
+       "      <td>45</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2002-11-20</td>\n",
+       "      <td>57</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2002-11-28</td>\n",
+       "      <td>60</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date  Observed Cases  Predicted Cases  Observed Deaths  \\\n",
+       "0 2002-01-18              18             10.0                0   \n",
+       "1 2002-10-04              12             35.4                0   \n",
+       "2 2002-10-11              15             35.4                2   \n",
+       "3 2002-10-17              18             35.4                2   \n",
+       "4 2002-10-24              41             35.4                4   \n",
+       "5 2002-10-31              45             35.5                4   \n",
+       "6 2002-11-20              57             35.5               10   \n",
+       "7 2002-11-28              60             35.5               11   \n",
+       "\n",
+       "   Predicted Deaths  \n",
+       "0               0.0  \n",
+       "1               0.0  \n",
+       "2               0.0  \n",
+       "3               0.0  \n",
+       "4               0.0  \n",
+       "5               0.0  \n",
+       "6               0.0  \n",
+       "7               0.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# calculate fit metrics\n",
+    "from scipy.interpolate import interp1d\n",
+    "\n",
+    "S_fit, E_fit, I_fit, R_fit, V_fit, D_fit = y_fitted\n",
+    "cases_model = E_fit + I_fit + R_fit + D_fit\n",
+    "\n",
+    "# interpolate to data time points\n",
+    "f_cases = interp1d(t_fitted, cases_model, kind='cubic')\n",
+    "f_deaths = interp1d(t_fitted, D_fit, kind='cubic')\n",
+    "\n",
+    "t_data = data['days_since_start'].values\n",
+    "cases_pred = f_cases(t_data)\n",
+    "deaths_pred = f_deaths(t_data)\n",
+    "\n",
+    "# calculate metrics\n",
+    "metrics_cases = calculate_model_metrics(data['cases_cumulative'].values, cases_pred)\n",
+    "metrics_deaths = calculate_model_metrics(data['deaths_cumulative'].values, deaths_pred)\n",
+    "\n",
+    "print(\"Model Fit Quality:\")\n",
+    "print(\"\\nCases:\")\n",
+    "for metric, value in metrics_cases.items():\n",
+    "    print(f\"  {metric:15s}: {value:.4f}\")\n",
+    "\n",
+    "print(\"\\nDeaths:\")\n",
+    "for metric, value in metrics_deaths.items():\n",
+    "    print(f\"  {metric:15s}: {value:.4f}\")\n",
+    "\n",
+    "# Create comparison table\n",
+    "comparison = pd.DataFrame({\n",
+    "    'Date': data['date'],\n",
+    "    'Observed Cases': data['cases_cumulative'],\n",
+    "    'Predicted Cases': cases_pred.round(1),\n",
+    "    'Observed Deaths': data['deaths_cumulative'],\n",
+    "    'Predicted Deaths': deaths_pred.round(1)\n",
+    "})\n",
+    "\n",
+    "print(\"Observed vs Predicted:\")\n",
+    "display(comparison)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b2cd3f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af93d26e",
+   "metadata": {},
+   "source": [
+    "## Visualize Model Fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e954529",
+   "metadata": {},
    "source": []
   }
  ],
