Restructuring for clarity

--- a/vaccination_economics/notebooks/Phase2_behavioral_economics.ipynb
+++ b/vaccination_economics/notebooks/Phase2_behavioral_economics.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "id": "40237e30",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
       "Public health campaign         76.3%\n",
       "Combined intervention          83.0%\n",
       "\n",
-      "Key Insight: Combined interventions most effective at raising coverage!\n"
+      "Combined interventions most effective at raising coverage\n"
      ]
     }
    ],
@@ -585,7 +585,7 @@
     "    prob = model.vaccination_probability(test_prev, test_cov, epi_params.R0)\n",
     "    print(f\"{name:<30} {prob:.1%}\")\n",
     "\n",
-    "print(\"\\nKey Insight: Combined interventions most effective at raising coverage!\")"
+    "print(\"\\nCombined interventions most effective at raising coverage\")"
    ]
   }
  ],
