updating file paths after restructuring

--- a/measles_abm/notebooks/measles_abm_model.ipynb
+++ b/measles_abm/notebooks/measles_abm_model.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2c18135c",
    "metadata": {},
    "outputs": [],
@@ -40,8 +40,8 @@
     "import sys, os \n",
     "sys.path.append(os.path.abspath(os.path.join('..','src')))\n",
     "\n",
-    "from epimodels.measles_ab_model import School, Student, MeaslesParameters, MeaslesABM, DiseaseState\n",
-    "from epimodels.utils.visualizations_measles_abm import (plot_seir_timeseries, plot_classroom_heatmap, \n",
+    "from measles_abm_models import School, Student, MeaslesParameters, MeaslesABM, DiseaseState\n",
+    "from visualizations import (plot_seir_timeseries, plot_classroom_heatmap, \n",
     "create_outbreak_animation, compare_scenarios, plot_vaccination_sensitivity, summarize_epidemic_statistics)\n",
     "\n",
     "# set random seed \n",
