--- a/vaccination_economics/notebooks/Phase2_behavioral_economics.ipynb
+++ b/vaccination_economics/notebooks/Phase2_behavioral_economics.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "52adcdf6",
    "metadata": {},
    "outputs": [
@@ -37,8 +37,8 @@
     "import sys, os \n",
     "sys.path.append(os.path.abspath(os.path.join(\"..\",\"src\")))\n",
     "\n",
-    "from epimodels.behavioral_model import BehavioralParameters, BehavioralDecisionModel\n",
-    "from dataio.seirv_parameters import MeaslesParameters\n",
+    "from behavioral_model import BehavioralParameters, BehavioralDecisionModel\n",
+    "from seirv_parameters import MeaslesParameters\n",
     "\n",
     "%matplotlib inline\n",
     "sns.set_style('whitegrid')\n",
