--- a/vaccination_economics/notebooks/phase1_seriv_model.ipynb
+++ b/vaccination_economics/notebooks/phase1_seriv_model.ipynb
@@ -31,9 +31,9 @@
     "\n",
     "sys.path.append(os.path.abspath(os.path.join('..','src')))\n",
     "\n",
-    "from epimodels.seir_v import SEIRVModel \n",
-    "from dataio.seirv_parameters import MeaslesParameters, create_low_coverage_params\n",
-    "from epimodels.utils.economic_framework import EconomicAnalysis\n",
+    "from seirv_models import SEIRVModel \n",
+    "from seirv_parameters import MeaslesParameters, create_low_coverage_params\n",
+    "from economic_framework import EconomicAnalysis\n",
     "\n",
     "sns.set_style('whitegrid')\n",
     "plt.rcParams['figure.figsize'] = (12, 8)\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "92366a1c",
    "metadata": {},
    "outputs": [
@@ -481,18 +481,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "398a6c14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sensitivity analysis complete\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test range of R0 values\n",
     "r0_values = np.linspace(12, 18, 7)\n",
@@ -521,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a41fef7a",
    "metadata": {},
    "outputs": [
@@ -595,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "96c580c8",
    "metadata": {},
    "outputs": [
@@ -779,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e4dd42cc",
    "metadata": {},
    "outputs": [
