--- a/yellow_fever/notebooks/yellow_fever_model.ipynb
+++ b/yellow_fever/notebooks/yellow_fever_model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1784d02d",
    "metadata": {},
    "outputs": [],
@@ -28,9 +28,9 @@
     "\n",
     "import sys, os \n",
     "sys.path.append(os.path.abspath(os.path.join('..','src')))\n",
-    "from epimodels.yellow_fever_models import YellowFeverModel, create_vaccination_function\n",
-    "from epimodels.fitting.parameter_estimation import ParameterEstimator, calculate_model_metrics\n",
-    "from epimodels.utils.visualizations_yellow_fever import YellowFeverVisualizer\n",
+    "from yellow_fever_models import YellowFeverModel, create_vaccination_function\n",
+    "from parameter_estimation import ParameterEstimator, calculate_model_metrics\n",
+    "from visualizations import YellowFeverVisualizer\n",
     "\n",
     "# set style\n",
     "sns.set_style('whitegrid')\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "73172f61",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "651d7814",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "845aebaf",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a31429ef",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d3aef966",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "05d1e8f5",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b0b79a84",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e26bca32",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7c0eda47",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "41f961ea",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2bd497ee",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "c7b23c16",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "7f2980de",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "deee73be",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "a8d6eccf",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "a7c1864f",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "8d203fc0",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "db9685c0",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "fd26f381",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "eb7e4a40",
    "metadata": {},
    "outputs": [
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "d4550360",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "c18267a9",
    "metadata": {},
    "outputs": [
