--- a/vaccination_economics/notebooks/phase1_seriv_model.ipynb
+++ b/vaccination_economics/notebooks/phase1_seriv_model.ipynb
@@ -481,10 +481,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "398a6c14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sensitivity analysis complete\n"
+     ]
+    }
+   ],
    "source": [
     "# test range of R0 values\n",
     "r0_values = np.linspace(12, 18, 7)\n",
@@ -513,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a41fef7a",
    "metadata": {},
    "outputs": [
@@ -587,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "96c580c8",
    "metadata": {},
    "outputs": [
@@ -771,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e4dd42cc",
    "metadata": {},
    "outputs": [
